# papayya-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: enrich_companies.py  local_demo_agent.py  test_agent.py
src/papayya/: __init__.py  _cli_errors.py  _config.py  _decorator_synthesis.py  _defaults.py  _demo.py  _otel_baggage.py  _reconcile.py  _serialize.py  agent.py  api.py  bundler.py  checks.py  classify.py  cli.py  client.py  decorators.py  errors.py  iterators.py  llm_extract.py  outcomes.py  papayya.py  runtime_context.py  tools.py  worker.py
src/papayya/dev/: _tier.py  server.py
src/papayya/dev/static/: _shell.html  agents.html  app.js  batch.html  batches.html  index.html  item.html  items.html  record.html  run.html  runs.html  search.html  style.css  upgrade.html
src/papayya/durable/: __init__.py  _errors.py  _replay.py  _schema.py  client.py  cloud_store.py  lineage_journal.py  run.py  sqlite_store.py  store.py  types.py
src/papayya/engine/: __init__.py  budget.py  interceptor.py
src/papayya/resources/: __init__.py  agents.py  api_keys.py  batches.py  deployments.py  items.py  projects.py  runs.py  schedules.py  secrets.py  triage.py  usage.py  webhooks.py
src/papayya/runtime/: __init__.py  __main__.py  _bundle_cache.py  _bundle_loader.py  dispatcher.py  worker.py
tests/: test_agent_decorator_partition_limits.py  test_agent_decorator_timeout.py  test_agent_input_snapshot.py  test_agent_run_injection.py  test_agent_version_log.py  test_agent_version_mismatch.py  test_agents_cli.py  test_ambient_wedge.py  test_api_keys_cli.py  test_auto_pause.py  test_batches_cli.py  test_batches_resource.py  test_bootstrap_run_id.py  test_bundle_loader.py  test_bundle_recycle.py  test_byo_checks.py  test_classify.py  test_cli_env_aware.py  test_cli_env_hoist.py  test_cli_env_scope.py  test_cli_example.py  test_cli_help_tiers.py  test_client_deprecated.py  test_cloud_store_journal.py  test_cloud_store_snapshots.py  test_config_migration.py  test_config_schedulespec_timezone.py  test_config_yaml.py  test_decorator_synthesis.py  test_decorators_harvest.py  test_decorators_schedule.py  test_decorators_trigger.py  test_deploy_dry_run_managed.py  test_deploy_reconcile.py  test_deployments_cli.py  test_dev_frontend.py  test_dev_server.py  test_dispatcher_event_log.py  test_dlq_cli.py  test_durable.py  (+46 more)
tests/integration/: _bundle_server.py  _dispatcher.py  _store.py  _worker_proc.py  conftest.py  test_bootstrap_mode.py  test_complete_idempotency.py  test_ensure_loaded_bundle.py  test_lease_agent_version.py  test_lease_ttl.py  test_multi_version_dispatch.py  test_per_item_timeout.py  test_recycle_thresholds.py  test_sigterm_drain.py  test_worker_acceptance.py  test_worker_auth.py
