[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papayya"
version = "0.1.1"
description = "Durable background jobs for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kingsley Torlowei" },
]
keywords = ["ai", "agents", "durable", "background-jobs", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1",
    "click>=8,<9",
]

[project.urls]
Homepage = "https://getpapayya.com"
Documentation = "https://docs.getpapayya.com"
Repository = "https://github.com/papayya-zero/papayya-python"

[project.scripts]
papayya = "papayya.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "build", "twine"]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/papayya"]
