[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papayya"
version = "0.2.0"
description = "Durable background jobs for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kingsley Torlowei" },
]
keywords = ["ai", "agents", "durable", "background-jobs", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1",
    "click>=8,<9",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "psutil>=6,<8",
]

[project.urls]
Homepage = "https://getpapayya.com"
Documentation = "https://docs.getpapayya.com"
Repository = "https://github.com/papayya-zero/papayya-python"

[project.scripts]
papayya = "papayya.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "build", "twine"]
dev = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/papayya"]

[tool.hatch.build.targets.sdist]
exclude = [
    "uv.lock",
    "examples/enrich_companies.py",
    "DESIGN_PARTNERS.md",
    ".papayya-test/",
    "tests/",
]
