[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papayya"
version = "0.2.1"
description = "Durable execution and per-item observability for periodic LLM jobs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kingsley Torlowei" },
]
keywords = ["ai", "agents", "durable", "background-jobs", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1",
    "click>=8,<9",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "psutil>=6,<8",
    "croniter>=2,<7",
]

[project.urls]
Homepage = "https://getpapayya.com"
Documentation = "https://docs.getpapayya.com"
Repository = "https://github.com/papayya-zero/papayya-python"

[project.scripts]
papayya = "papayya.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "build", "twine"]
dev = []
# OpenTelemetry baggage propagation for auto-captured LLM cost (Plan 07).
# Strictly optional: pip install papayya stays unchanged; customers who
# want OTel-based cost attribution add this extra and the @agent wrapper
# starts setting baggage + span attrs that the control-pane mapper
# reads. opentelemetry-api alone is enough at runtime; the sdk extra is
# included so customers who only install papayya[otel] also get a
# working exporter pipeline.
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/papayya"]

[tool.hatch.build.targets.sdist]
exclude = [
    "uv.lock",
    "examples/enrich_companies.py",
    "DESIGN_PARTNERS.md",
    ".papayya-test/",
    "tests/",
]
